2011-02-03  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_load_audio_file, lavt_load_audio_string):
	on error return nil and an error message

2010-11-26  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/utf8.lua (utf8.codepoints): new function

2010-11-25  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_mb_encoding): fix

2010-11-23  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_mb_encoding):
	check if new encoding is actually different

2010-11-21  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/utf8.lua (utf8.sub): new function

2010-11-20  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/utf8.lua (utf8.check_unicode):
	no fallback

	* lua/lua-akfavatar-prg.c:
	don't include the base64 lib (available as module now)

2010-11-19  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/utf8.lua (utf8.bold, utf8.underlined):
	new functions

2010-11-17  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c (avta_term_run):
	fix: unlock updates, reset newline mode

	* avtaddons.h, avtterm.c (avta_term_initialize):
	changed definition
	avttermsys.h, avttermsys.c (avta_term_initialize): dito
	avatarsay.c: adapted

2010-11-16  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/utf8.lua (utf8.check): limit for checks

	* lua/akfavatar/utf8.lua (utf8.check_unicode): new function
	(lua/textview.lua): try to detect text encoding

	* lua/lua-akfavatar-prg (main): reset more settings

	* lua/akfavatar-term.c, lua/terminal.lua: new files

2010-11-15  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/utf8.lua (utf8.check_bom, utf8.check):
	new functions

2010-11-14  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/utf8.lua (utf8.characters): new function

	* lua/akfavatar/utf8.lua (utf8.codepoint): new function

	* lua/lua-avt.c (lavt_colors => avt.colors): new function

2010-11-13  Andreas K. Foerster  <info@akfoerster.de>
