@@ -3,6 +3,8 @@
 	* lua/lua-avt.c (lavt_load_audio_file, lavt_load_audio_string):
 	on error return nil and an error message
 
+	* avatar-audio.c (avt_load_audio_RW): improve error messages
+
 2010-11-26  Andreas K. Foerster  <info@akfoerster.de>
 
 	* lua/akfavatar/utf8.lua (utf8.codepoints): new function
